styles/global/fonts.scss
html {
    font-size: 16px;
}

.nav-header {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 1em;
    line-height: 1.5;
    letter-spacing: -0.02em;
}

.eyebrow {
    font-family: $inter;
    font-style: normal;
    font-weight: normal;
    font-size: .75em;
    line-height: 1.5;
}

h1 {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 3em;
    line-height: 1.2;
    letter-spacing: -0.02em;
    margin-bottom: .45em;    
}

h2 {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 2.25em;
    line-height: 1.4;
    letter-spacing: -0.02em;
    margin-bottom: 0.5em;
    margin-top: 1.25em;
}

h3 {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 1.5em;
    line-height: 1.2;
    letter-spacing: -0.02em;
    margin-bottom: 0.5em;
    margin-top: 1.25em;
}

h4 {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 1.125em;
    line-height: 1.5;
    letter-spacing: -0.02em;
    margin-bottom: 0.5em;
    margin-top: 1.25em;
}

h5 {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 1.1em;
    line-height: 1.5;
    letter-spacing: -0.02em;
    margin-bottom: 0.5em;
    margin-top: 1.25em;
}

h6 {
    font-family: $inter;
    font-style: normal;
    font-weight: bold;
    font-size: 1em;
    line-height: 1.5;
    letter-spacing: -0.02em;
    margin-bottom: 0.5em;
    margin-top: 1.25em;
}

.large {
    font-family: $inter;
    font-style: normal;
    font-weight: normal;
    font-size: 1.125em;
    line-height: 1.5;
}

p,
li,
a {
    font-family: $inter;
    font-style: normal;
    font-weight: normal;
    font-size: 1em;
    line-height: 1.75;
    letter-spacing: -0.02em;
}

p {
    margin-bottom: 1em;
}

ol, ul {
    margin: 0 1.5em;
    padding: 0;
}

p > code {
    display: inline-block;
    border: 1px solid;
    color: $pink;
    border-color: $gray-40;
    border-radius: 5px;
    padding: 0.1em 0.3em;
    margin: 0 0.2em;
}

p a code {
    border: none;
    padding: 0;
}

li p:only-child {
    margin-bottom: 0;
}

ol + p, ul + p {
    margin-top: 2em;
}

ol + ul, ul + ol, ol + ol, ul + ul {
    margin-top: 1em;
}


.no-b-m {
    margin-top: 0.883em;
    margin-bottom: 0.23em;
}

.small {
    font-family: $inter;
    font-style: normal;
    font-weight: normal;
    font-size: 0.875em;
    line-height: 1.5;
}

.tiny,
select {
    font-family: $inter;
    font-style: normal;
    font-weight: normal;
    font-size: 0.75em;
    line-height: 1.5;
}

//
//   _____           _   ___                            _
// |  ______  _ __ | |_|_ _|_ __ ___  _ __   ___  _ __| |_ ___
// | |_ / _ \| '_ \| __ | || '_ ` _ \| '_ \ / _ \| '__| __/ __|
// |  _| (_) | | | | |_ | || | | | | | |_) | (_) | |  | |_\__ \
// |_|  \___/|_| |_|\__|___|_| |_| |_| .__/ \___/|_|   \__|___/
//                                   |_|
//
@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: url(https://fonts.gstatic.com/s/materialicons/v88/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
}

.material-icons,
i {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}

//
//    ____                            ____          _      ____
//   / ___|  ___  _   _ _ __ ___ ___ / ___|___   __| | ___|  _ \ _ __ ___
//   \___ \ / _ \| | | | '__/ __/ _ | |   / _ \ / _` |/ _ | |_) | '__/ _ \
//    ___) | (_) | |_| | | | (_|  __| |__| (_) | (_| |  __|  __/| | | (_) |
//   |____/ \___/ \__,_|_|  \___\___ \____\___/ \__,_|\___|_|   |_|  \___/
//

/* cyrillic-ext */

@font-face {
    font-family: 'Source Code Pro';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_QiYsKILxRpg3hIP6sJ7fM7PqlONvZlMIFxGC8NAU.woff2) format('woff2');
    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
}


/* cyrillic */

@font-face {
    font-family: 'Source Code Pro';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_QiYsKILxRpg3hIP6sJ7fM7PqlONvQlMIFxGC8NAU.woff2) format('woff2');
    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}


/* greek */

@font-face {
    font-family: 'Source Code Pro';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_QiYsKILxRpg3hIP6sJ7fM7PqlONvXlMIFxGC8NAU.woff2) format('woff2');
    unicode-range: U+0370-03FF;
}


/* vietnamese */

@font-face {
    font-family: 'Source Code Pro';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_QiYsKILxRpg3hIP6sJ7fM7PqlONvblMIFxGC8NAU.woff2) format('woff2');
    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
}


/* latin-ext */

@font-face {
    font-family: 'Source Code Pro';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_QiYsKILxRpg3hIP6sJ7fM7PqlONvalMIFxGC8NAU.woff2) format('woff2');
    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* ... */

